Style: review comment fix: centre align the restaurant items for large screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,11 +202,11 @@ nav h1 a {
 #restaurants-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
 #restaurants-list li {
